Fix macOS env preparation in gamlab_dev_ws role

--- a/roles/gamlab_dev_workstation/tasks/macos-buildenv.yml
+++ b/roles/gamlab_dev_workstation/tasks/macos-buildenv.yml
@@ -27,7 +27,12 @@
     - carthage
     - jq
 
-# TODO: https://stackoverflow.com/questions/60481623/errors-when-installing-cocoapods-with-gem
+# https://stackoverflow.com/questions/60481623/errors-when-installing-cocoapods-with-gem
+- name: Switch to macOS Command line tools
+  become: true
+  command: xcode-select --switch /Library/Developer/CommandLineTools
+  changed_when: false
+
 - name: Installing fastlane and cocoapods
   become: true
   command: "{{ item }}"
