Add backup downtime support, restrict notifications during the day

--- a/roles/icinga2/tasks/main.yml
+++ b/roles/icinga2/tasks/main.yml
@@ -61,6 +61,8 @@
         - custom_commands.conf
         - users.conf
         - external_services.conf
+        - downtime.conf
+        - timeperiods.conf
 
     - name: Copy Telegram notifications definition
       become: true
