--- a/roles/gitlab_runner/tasks/debian.yml
+++ b/roles/gitlab_runner/tasks/debian.yml
@@ -2,26 +2,12 @@
     apt:
       cache_valid_time: 86400
   block:
-    - name: Install requirements
-      become: true
-      apt:
-        pkg:
-          - gnupg
-          - openssh-server
-          - debian-archive-keyring
-          - apt-transport-https
-        state: present
-
-    - name: Add GitLab repo key
-      become: true
-      apt_key:
-        url: https://packages.gitlab.com/gpg.key
-        state: present
-
-    - name: Adding GitLab runner repository
-      become: true
-      apt_repository:
-        repo: "deb https://packages.gitlab.com/runner/gitlab-runner/debian/ {{ ansible_distribution_release }} main"
+    - name: Add gitlab runner repositories
+      include_tasks: _apt-repo.yml
+      loop:
+        - name: gitlab
+          key: https://packages.gitlab.com/gpg.key
+          repo_line: "https://packages.gitlab.com/runner/gitlab-runner/debian/ {{ ansible_distribution_release }} main"
 
     - name: "Install gitlab runner"
       become: true
