--- a/roles/nvidia_cuda/tasks/main.yml
+++ b/roles/nvidia_cuda/tasks/main.yml
@@ -7,20 +7,18 @@
         msg: This role is compatible only with Debian 10 buster
       when: ansible_distribution_release != 'buster'
 
-    - name: Adding NVIDIA repo key
-      become: true
-      apt_key:
-        url: https://nvidia.github.io/nvidia-docker/gpgkey
-        state: present
-
-    - name: Adding NVIDIA repositories
-      become: true
-      apt_repository:
-        repo: "{{ item }}"
-      with_items:
-        - "deb https://nvidia.github.io/libnvidia-container/stable/debian10/$(ARCH) /"
-        - "deb https://nvidia.github.io/nvidia-container-runtime/stable/debian10/$(ARCH) /"
-        - "deb https://nvidia.github.io/nvidia-docker/debian10/$(ARCH) /"
+    - name: Add NVIDIA repositories
+      include_tasks: _apt-repo.yml
+      loop:
+        - name: libnvidia-container
+          key: https://nvidia.github.io/nvidia-docker/gpgkey
+          repo_line: "https://nvidia.github.io/libnvidia-container/stable/debian10/$(ARCH) /"
+        - name: nvidia-container-runtime
+          key: https://nvidia.github.io/nvidia-docker/gpgkey
+          repo_line: "https://nvidia.github.io/nvidia-container-runtime/stable/debian10/$(ARCH) /"
+        - name: nvidia-docker
+          key: https://nvidia.github.io/nvidia-docker/gpgkey
+          repo_line: "https://nvidia.github.io/nvidia-docker/debian10/$(ARCH) /"
 
     - name: Install NVIDIA packages
       become: true
