--- a/roles/postfix_leaf/tasks/main.yml
+++ b/roles/postfix_leaf/tasks/main.yml
@@ -27,7 +27,7 @@
       copy:
         dest: /etc/postfix/smtp_sasl_passwd
         content: |
-          [{{ smtp_relay_host }}]:465     {{ smtp_username }}:{{ smtp_password }}
+          {{ smtp_relay_host }}     {{ smtp_username }}:{{ smtp_password }}
         mode: 0600
         owner: root
         group: root
@@ -35,37 +35,56 @@
 
     - name: Create Postfix configuration
       become: true
-      copy:
+      template:
+        src: main.cf.j2
         dest: /etc/postfix/main.cf
-        content: |
-          compatibility_level = 2
-          smtpd_banner = $myhostname ESMTP $mail_name (Debian/GNU)
-          biff = no
-          append_dot_mydomain = no
-          readme_directory = no
-          smtpd_use_tls=no
-          smtpd_relay_restrictions = permit_mynetworks permit_sasl_authenticated defer_unauth_destination
-          myhostname = {{ inventory_hostname }}
-          alias_maps = hash:/etc/aliases
-          alias_database = hash:/etc/aliases
-          mydestination = $myhostname, localhost.localdomain, localhost
-          relayhost = [{{ smtp_relay_host }}]:465
-          mynetworks = 127.0.0.0/8 [::ffff:127.0.0.0]/104 [::1]/128
-          mailbox_size_limit = 0
-          recipient_delimiter = +
-          inet_interfaces = loopback-only
-          inet_protocols = all
-          smtp_use_tls = yes
-          smtp_tls_session_cache_database = btree:${data_directory}/smtp_scache
-          smtp_sasl_password_maps = hash:/etc/postfix/smtp_sasl_passwd
-          smtp_sasl_auth_enable = yes
-          smtp_tls_security_level = encrypt
-          smtp_tls_wrappermode = yes
-          smtp_sasl_security_options = noanonymous
         mode: 0600
         owner: root
         group: root
       notify: "Restart Postfix"
+
+    - name: Create sender rewriter
+      become: true
+      copy:
+        dest: /etc/postfix/sender_canonical_maps
+        content: |
+          /.+/    {{ smtp_from }}
+        mode: 0600
+        owner: root
+        group: root
+
+    - name: Create recipient rewriter
+      become: true
+      copy:
+        dest: /etc/postfix/recipient_canonical_maps
+        content: |
+          /^root@.+/    {{ smtp_recipient }}
+        mode: 0600
+        owner: root
+        group: root
+
+    - name: Create relayed rewriter
+      become: true
+      copy:
+        dest: /etc/postfix/header_check
+        content: |
+          /From:.*/ REPLACE From: {{ smtp_from }}
+          /To: root@.*/ REPLACE From: {{ smtp_recipient }}
+        mode: 0600
+        owner: root
+        group: root
+
+    - name: Create mailname
+      become: true
+      copy:
+        dest: /etc/mailname
+        content: "{{ inventory_hostname }}"
+        mode: 0644
+        owner: root
+        group: root
+      notify:
+        - "Reload aliases"
+        - "Restart Postfix"
 
     - name: Add alias for root in aliases
       become: true
