--- a/roles/icinga2/tasks/main.yml
+++ b/roles/icinga2/tasks/main.yml
@@ -2,26 +2,12 @@
     apt:
       cache_valid_time: 86400
   block:
-    - name: Ensure prerequisites are installed
-      become: true
-      apt:
-        pkg:
-          - apt-transport-https
-          - wget
-          - gnupg
-        state: present
-
-    - name: Ensure icinga2 repo key is installed
-      become: true
-      apt_key:
-        url: https://packages.icinga.com/icinga.key
-        state: present
-
-    - name: Ensure icinga2 repo is configured
-      become: true
-      apt_repository:
-        filename: "icinga2"
-        repo: "deb https://packages.icinga.com/{{ ansible_distribution | lower }} icinga-{{ ansible_distribution_release }} main"
+    - name: Add icinga2 repositories
+      include_tasks: _apt-repo.yml
+      loop:
+        - name: icinga2
+          key: https://packages.icinga.com/icinga.key
+          repo_line: "https://packages.icinga.com/{{ ansible_distribution | lower }} icinga-{{ ansible_distribution_release }} main"
 
     - name: Install Icinga2
       become: true
