--- a/roles/apt/tasks/main.yml
+++ b/roles/apt/tasks/main.yml
@@ -1,7 +1,3 @@
-- name: Debian
-  import_tasks: debian.yml
-  when: (ansible_distribution_release == 'bullseye' or ansible_distribution_release == 'bookworm') and ansible_distribution == 'Debian'
-
-- name: Ubuntu
-  import_tasks: ubuntu.yml
-  when: ansible_distribution == 'Ubuntu'
+- name: APT
+  import_tasks: apt.yml
+  when: ansible_distribution == 'Ubuntu' or ansible_distribution == 'Debian'
