containers: add podman native ZFS support/config

--- a/roles/containers/tasks/debian.yml
+++ b/roles/containers/tasks/debian.yml
@@ -191,3 +191,13 @@
       when: not docker_manual_log_config
       notify: "Reload docker"
 
+# Configure Podman to use ZFS
+    - name: Configure ZFS driver for Podman
+      become: true
+      lineinfile:
+        path: /etc/containers/storage.conf
+        regexp: '^driver ='
+        line: 'driver = "zfs"'
+        insertafter: '^\[storage\]'
+        state: present
+      when: '"ZFS" in ansible_cmdline["root"]'
