--- a/roles/icinga2/tasks/_apt-repo.yml
+++ b/roles/icinga2/tasks/_apt-repo.yml
@@ -4,6 +4,7 @@
   command: dpkg --print-architecture
   register: dpkg_arch
   changed_when: false
+  check_mode: false
 
 - name: Ensure requirements are installed
   become: true
