wireguard: disable local dump with a single flag

--- a/roles/wireguard/defaults/main.yml
+++ b/roles/wireguard/defaults/main.yml
@@ -2,3 +2,4 @@ wireguard_remove_unknown: false
 wireguard_default_keepalive: 30
 wireguard_default_port: 13231
 wireguard_default_mtu: 1420
+wireguard_cfg_dump: false
