--- a/roles/wireguard/tasks/main.yml
+++ b/roles/wireguard/tasks/main.yml
@@ -17,4 +17,4 @@
   loop_control:
     loop_var: rhost
     label: "Host"
-  when: wireguard_cfg_dump_group is defined and wireguard_cfg_dump_path is defined
+  when: wireguard_cfg_dump
