prometheus_exporters: ignore errors when old exporters are not present

--- a/roles/prometheus_exporters/tasks/node.yml
+++ b/roles/prometheus_exporters/tasks/node.yml
@@ -28,6 +28,7 @@
     state: stopped
     name: node-exporter
     enabled: false
+  ignore_errors: true
 
 - name: Remove old systemd configurations
   become: true
